feat(pqc): wire ML-KEM-768+X25519 encrypt/decrypt into the OpenPGP codec
Encrypt: HsmCompositeMlKemKeyEncryptionMethodGenerator implements
PGPKeyEncryptionMethodGenerator directly rather than extending
PublicKeyKeyEncryptionMethodGenerator - the base class constructor and
its encodeEncryptedSessionInfo(byte[]) both validate the algorithm tag
against bcpg 1.85's fixed, hard-coded list and reject 35 outright.
Orchestrates ECDH-KEM via HsmKeyAgreementExecutor (reusing the existing
static-sender-key simplification from the native X25519 path) and
ML-KEM via HsmKeyEncapsulationExecutor, then builds the PKESK packet via
PublicKeyEncSessionPacket's public createV3/V6PKESKPacket factories
(unlike the algorithm-checked reading constructor, these accept any
algorithm ID).

Decrypt: bcpg 1.85's PublicKeyEncSessionPacket reading constructor
throws on unknown algorithm IDs before any of our code runs, so
PGPObjectFactory/PGPEncryptedDataList can never produce a
PGPPublicKeyEncryptedData for this algorithm. HsmBackedOpenPgpMessageCodec
now branches early for ML_KEM_768_X25519: it parses the leading PKESK
packet manually (pure framing, see HsmCompositeMlKemPkeskCodec),
resolves the session key eagerly via
HsmCompositeMlKemPublicKeyDataDecryptorFactory (implements
SessionKeyDataDecryptorFactory - BC's gpg --override-session-key
equivalent), and constructs a PGPSessionKeyEncryptedData for the
already-parseable SEIPD packet through its package-visible constructor
via reflection, so the existing MDC/AEAD verification logic in Bouncy
Castle is reused unchanged instead of being duplicated.

HsmTestFixture/PgpTestKeys gain composite-recipient registration and
ML-KEM-768 key generation (with a small hand-rolled DER walker to pull
the raw FIPS-203 public key out of the JCA X.509 SubjectPublicKeyInfo
encoding - neither bcpg-jdk18on nor bcutil-jdk18on carry the ASN.1
x509 classes to do this generically). Round-trip integration test added
for both SEIPD profiles.

Co-Authored-By: Claude Sonne